Fixed auto overflow

--- a/src/style.css
+++ b/src/style.css
@@ -100,7 +100,7 @@ body #extraUI {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
   position: relative;
   max-width: 30vw;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   max-height: 60vh;
 }
